<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM3</name>
  <version>0.0.1</version>
  <description>The ORB_SLAM3 package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <author email="your_email@example.com">Your Name</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
